tests/compile-fail/derive_from_discriminant_without_repr.rs
use enum_discriminant::FromDiscriminant;

#[derive(FromDiscriminant)]
enum MyEnum {
    Variant,
}

fn main() {}
